fix: make overflow on y-axis visible

--- a/src/pages/coming-soon/coming-soon.css
+++ b/src/pages/coming-soon/coming-soon.css
@@ -2,7 +2,7 @@
     background-color: #fff;
     height: 100vh;
     width: 100vw;
-    overflow: hidden;
+    overflow-x: hidden;
     color: black;
     font-family: 'Roboto', sans-serif;
     text-transform: uppercase;
